2004-04-01  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (dump_entries_in_dir): don't dump
	the value if its the schema default.

2004-04-01  Mark McLoughlin  <mark@skynet.ie>

	* gconf/default.path.in: fix the position of the
	local-defaults.path include. Bug #137578.

2004-03-29  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconf-database.c:
	(safe_g_hash_table_insert): remove - no hash table here.

2004-03-24  Mark McLoughlin  <mark@skynet.ie>
	
	* gconf/gconf-database.c: (impl_ConfigDatabase_set): don't
	convert the value into a string and then do nothing with it.
	
2004-03-24  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: kill the message-of-doom.

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-22  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.6.1.

2004-03-22  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.6.0

2004-03-18  Ross Burton  <ross@burtonini.com>

	* doc/FAQ.txt:
	Added a FAQ, based upon the old FAQ and updated for the new
	locking policy.

2004-03-16  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added "en_GB" (British) to ALL_LINGUAS

2004-03-02 Dinesh Nadarajah <dinesh_list@sbcglobal.net>

        * ta.po: Started Tamil Translation.

2004-02-24  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.5.90.

2004-02-01  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2003-12-14  Havoc Pennington  <hp@redhat.com>

	* configure.in: 2.5.1

2003-12-03  Ross Burton  <ross@burtonini.com>

	* tmpl/gconf.sgml: lamest patch *ever*, remove a newline.

Tue Nov  4 17:17:07 2003  Jonathan Blandford  <jrb@redhat.com>

	* gconf/gconf-changeset.h: register GConfChangeSet as a boxed type.

2003-11-02  Havoc Pennington  <hp@pobox.com>

	* ChangeLog: ascii-ize various people's names; Emacs can't handle 
	UTF-8, sadly
