@@ -1,3 +1,8 @@
+2004-04-02  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconftool.c: (set_values), (process_entry): handle
+	an <entry> with only a <schema_name> correctly.
+
 2004-04-01  Mark McLoughlin  <mark@skynet.ie>
 
 	* gconf/gconftool.c: (dump_entries_in_dir): don't dump
